Update composer to point to fork

--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,1 @@
-{
-    "name" : "netglue/zf2-prismic-module",
-    "description" : "ZF2 module for the Prismic PHP SDK. Simple wrapper and some added convenience.",
-    "licence" : "MIT",
-    "keywords" : [
-        "prismic.io",
-        "zf2",
-        "netglue"
-    ],
-    "homepage" : "http://netglue.co/",
-    "authors" : [
-        {
-            "name" : "George Steel",
-            "email" : "george@net-glue.co.uk",
-            "homepage" : "http://netglue.co/"
-        }
-    ],
-    "config" : {
-        "bin-dir" : "bin"
-    },
-    "require" : {
-        "php" : ">=5.4",
-        "zendframework/zendframework" : "2.3.*",
-        "prismic/php-sdk": "dev-master"
-    },
-    "require-dev" : {
-
-    },
-    "autoload" : {
-        "psr-0" : {
-            "NetgluePrismic" : "src/"
-        }
-    }
-}
+{"name":"netglue/zf2-prismic-module","description":"ZF2 module for the Prismic PHP SDK. Simple wrapper and some added convenience.","licence":"MIT","keywords":["prismic.io","zf2","netglue"],"homepage":"http://netglue.co/","authors":[{"name":"George Steel","email":"george@net-glue.co.uk","homepage":"http://netglue.co/"}],"config":{"bin-dir":"bin"},"require":{"php":">=5.4","zendframework/zendframework":"2.3.*","gsteel/php-sdk":"dev-label-spans-in-structured-text"},"require-dev":{},"autoload":{"psr-0":{"NetgluePrismic":"src/"}},"repositories":[{"type":"vcs","url":"git@github.com:gsteel/php-kit.git"},{"type":"vcs","url":"git@bitbucket.org:netglue/zf2-prismic-module.git"}]}
