Upstream sdk changes are merged

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "require" : {
         "php" : ">=5.4",
         "zendframework/zendframework" : "2.3.*",
-        "prismic/php-sdk": "dev-label-spans-in-structured-text"
+        "prismic/php-sdk": "dev-master"
     },
     "require-dev" : {
 
