--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     },
     "autoload" : {
         "psr-0" : {
-            "NetgluePrismic" : "src/"
+            "NetgluePrismic" : [ "src/", "tests/" ]
         }
     },
     "repositories": [
