--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,23 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - hhvm
+
+matrix:
+  allow_failures:
+    - php: hhvm
+    
 before_script:
   - chmod +x ./tests/install-apcu.sh
   - ./tests/install-apcu.sh
   - phpenv config-add tests/$TRAVIS_PHP_VERSION.ini
   - phpenv config-add tests/apc.ini
-  - composer install --dev --prefer-source
+  - curl -s http://getcomposer.org/installer | php
+  - php composer.phar install --dev --no-interaction
 
-script: phpunit
+script:
+  - mkdir -p build/logs
+  - phpunit --coverage-clover build/logs/clover.xml
+
+after_script:
+  - php vendor/bin/coveralls -v
