--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "prismic/php-sdk": "dev-master"
     },
     "require-dev" : {
-
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload" : {
         "psr-0" : {
