--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ matrix:
 before_script:
   - chmod +x ./tests/install-apcu.sh
   - ./tests/install-apcu.sh
-  - phpenv config-add tests/$TRAVIS_PHP_VERSION.ini
+  - phpenv config-add tests/php.ini
   - phpenv config-add tests/apc.ini
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev --no-interaction
