--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ matrix:
     - php: hhvm
     
 before_script:
-  - chmod +x ./tests/install-apcu.sh
-  - ./tests/install-apcu.sh
-  - phpenv config-add tests/php.ini
-  - phpenv config-add tests/apc.ini
+  - chmod +x ./tests/travis/install-apcu.sh
+  - ./tests/travis/install-apcu.sh
+  - phpenv config-add tests/travis/$TRAVIS_PHP_VERSION.ini
+  - phpenv config-add tests/travis/apc.ini
   - curl -s http://getcomposer.org/installer | php
   - php composer.phar install --dev --no-interaction
 
