--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "prismic/php-sdk": "dev-master"
     },
     "require-dev" : {
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+        "codeclimate/php-test-reporter": "dev-master"
     },
     "autoload" : {
         "psr-0" : {
