--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
             "homepage" : "http://netglue.co/"
         }
     ],
+    "minimum-stability": "dev",
     "require" : {
         "php" : ">=5.4",
         "zendframework/zendframework" : "2.3.*",
