--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "require" : {
         "php" : ">=5.4",
         "zendframework/zendframework" : "2.3.*",
-        "prismic/php-sdk": "dev-master",
+        "prismic/php-sdk": ">=1.5.3",
         "egeloen/http-adapter": "~0.1"
     },
     "require-dev" : {
