--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: php
+sudo: false
 
 php:
-  - 5.4
   - 5.5
   - 5.6
+  - 7.0
     
 before_script:
-  - chmod +x ./tests/travis/install-apcu.sh
-  - ./tests/travis/install-apcu.sh
-  - phpenv config-add tests/travis/$TRAVIS_PHP_VERSION.ini
-  - phpenv config-add tests/travis/apc.ini
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev --no-interaction
-
+  - if [[ $TRAVIS_PHP_VERSION =~ 5.[56] ]] ; then echo yes | pecl install apcu-4.0.10; fi;
+  - if [[ $TRAVIS_PHP_VERSION = 7.* ]] ; then echo yes | pecl install apcu; fi;
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then phpenv config-add ./tests/travis/apc.ini; fi;
+  - composer install --dev --prefer-source
+  
 script:
   - mkdir -p build/logs
   - phpunit
