--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ 5.[56] ]] ; then echo yes | pecl install apcu-4.0.10; fi;
   - if [[ $TRAVIS_PHP_VERSION = 7.* ]] ; then echo yes | pecl install apcu; fi;
   - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then phpenv config-add ./tests/travis/apc.ini; fi;
-  - composer install --dev --prefer-source
+  - phpenv config-add ./tests/travis/php.ini
+  - composer install
   
 script:
   - mkdir -p build/logs
