--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,15 @@ language: php
 sudo: false
 
 php:
-  - 5.5
   - 5.6
   - 7.0
+  - 7.1
     
 before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ 5.[56] ]] ; then echo yes | pecl install apcu-4.0.10; fi;
   - if [[ $TRAVIS_PHP_VERSION = 7.* ]] ; then echo yes | pecl install apcu; fi;
-  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then phpenv config-add ./tests/travis/apc.ini; fi;
-  - phpenv config-add ./tests/travis/php.ini
-  - composer install
+  - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then phpenv config-add ./tests/apc.ini; fi;
+  - composer install --dev --prefer-source
   
 script:
   - mkdir -p build/logs
