--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,12 @@ php:
     
 before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ 5.[56] ]] ; then echo yes | pecl install apcu-4.0.10; fi;
-  - if [[ $TRAVIS_PHP_VERSION = 7.* ]] ; then echo yes | pecl install apcu; fi;
   - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then phpenv config-add ./tests/apc.ini; fi;
   - composer install --dev --prefer-source
   
 script:
   - mkdir -p build/logs
-  - phpunit
+  - vendor/bin/phpunit
 
 after_script:
   - php vendor/bin/coveralls -v
