--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "prismic/php-sdk": ">=1.5.3"
     },
     "require-dev" : {
-        "codeclimate/php-test-reporter": "dev-master"
+        "codeclimate/php-test-reporter": "dev-master",
+        "phpunit/phpunit": "~5.0"
     },
     "autoload" : {
         "psr-0" : {
