--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ php:
 before_script:
   - if [[ $TRAVIS_PHP_VERSION =~ 5.[56] ]] ; then echo yes | pecl install apcu-4.0.10; fi;
   - if [[ $TRAVIS_PHP_VERSION != 'hhvm' ]]; then phpenv config-add ./tests/apc.ini; fi;
-  - composer install --dev --prefer-source
+  - composer install
   
 script:
   - mkdir -p build/logs
